# poetry2nix-example

./: pyproject.toml  shell.nix
consumer/: pyproject.toml
consumer/consumer/: main.py
core/: pyproject.toml
core/core/: models.py
