[tool.poetry]
name = "poetry2nix-example"
version = "0.1.0"
description = "A dependency used by a dependency"
authors = ["confusus <ardtimmerman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
core = {path = "./core", develop = true}
consumer = {path = "./consumer", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
